# LibrarySystem

./: .gitignore  CMakeLists.txt  Ex05+.md  README.md  main.cpp
data/: books.csv  books.json  books.txt  books.xml  users.csv  users.json  users.txt  users.xml
src/core/: Book.h  LoanTicket.h  Object.h  User.h
src/core/Enums/: Enum.h
src/core/Helpers/: DataHelper.h  LoanTicketParser.h
src/repositories/: BookRepository.cpp  BookRepository.h  UserRepository.cpp  UserRepository.h
src/repositories/DataFormatters/: CsvFormatter.cpp  CsvFormatter.h  FormatterFactory.cpp  FormatterFactory.h  IDataFormatter.h  JsonFormatter.cpp  JsonFormatter.h  TxtFormatter.cpp  TxtFormatter.h  XmlFormatter.cpp  XmlFormatter.h
src/repositories/Helpers/: FileHelper.h  StringHelper.h
src/services/: LibraryService.cpp  LibraryService.h
src/ui/: AdminMenu.h  App.h  BaseMenu.h  UIHelper.h  UserMenu.h
tests/: TestCore.cpp
